--- a/1.0.0/description.html
+++ b/1.0.0/description.html
@@ -6,7 +6,7 @@
 </style>
 <div style="text-align: center;">
     <br><br>
-    <h1>Cool Cars</h1>
-    <h2>By CRJakob</h2>
-    <h2>Adds a few Cool Cars to Car Switcher</h2>
+    <h1>PolyCinema</h1>
+    <h2>By Hero, CRJakob</h2>
+    <h2>Adds several aspect ratio bar presets to make PolyTrack look cooler!</h2>
 </div>
